--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "format": "prettier --write .",
+    "lint": "eslint .",
+    "format": "prettier .",
+    "format:check": "prettier . --check",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
