Refactor .prettierignore to avoid binary or dependency tree for gh actions

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "eslint .",
     "format": "prettier .",
-    "format:check": "prettier . --check",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md,yml}\"",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
