--- a/.github/workflows/ci-common.yaml
+++ b/.github/workflows/ci-common.yaml
@@ -1,10 +1,7 @@
-name: CI
+name: Reusable CI
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_call:
 
 jobs:
   lint:
@@ -24,7 +21,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: "pnpm"
+          cache: pnpm
 
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
@@ -41,25 +38,19 @@ jobs:
     needs: lint
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
+      - uses: pnpm/action-setup@v4
         with:
           version: 10
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: "pnpm"
+          cache: pnpm
 
-      - name: Install Dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Run TypeScript Type Check
-        run: pnpm type-check
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm type-check
 
   build:
     name: Build Check
@@ -67,22 +58,16 @@ jobs:
     needs: type-check
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
+      - uses: pnpm/action-setup@v4
         with:
           version: 10
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: "pnpm"
+          cache: pnpm
 
-      - name: Install Dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Run Build
-        run: pnpm build
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm build
